--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     </head>
 
     <body>
+        <header>
+            <nav>
+                <a href="index.html">Pixar</a>
+                <ul>
+                    <li><a href="https://www.pixar.com/feature-films-launch">Feature Films</a></li>
+                    <li><a href="https://www.pixar.com/short-films-1">Short Films</a></li>
+                    <li><a href="https://www.pixar.com/technology">Technology</a></li>
+                    <li><a href="https://www.pixar.com/careers">Careers</a></li>
+                    <li><a href="https://www.pixar.com/extras">Extras</a></li>
+                    <li><a href="https://www.pixar.com/about">About</a></li>
+                </ul>
+            </nav>
+        </header>
+        <setction>
+            <img src= "Images/ONWARD.jpg_" alt="Onward">
+            <h1>Feature FIilms</h1>
+        </setction>
+
+
         <h1>Movies</h1>
         <p>These are my favorite pixar movies</p>
         <ol>
