--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                 </ul>
             </nav>
         </header>
-        <setction>
+        <section>
             <img src= "Images/ONWARD.jpg_" alt="Onward">
             <h1>Feature FIilms</h1>
-        </setction>
+        </section>
 
 
-        <h1>Movies</h1>
+        <h2>Movies</h2>
         <p>These are my favorite pixar movies</p>
         <ol>
             <li> The incredibles</li>
@@ -33,7 +33,7 @@
             <li> Toy Story</li>
             <li> Up!</li>
         </ol>
-        <h1>Characters</h1>
+        <h2>Characters</h2>
     <ul>
         <li>Remy</li>
         <li>Sully</li>
